--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-Flask==2.2.3
-gunicorn==22.0.0
+click==7.1.2
+Flask==1.1.2
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+Werkzeug==1.0.1
